src/tests/snapshots/cendol__tests__semantic_regr_complex_refactor__complex_comparison.snap
---
source: src/tests/semantic_regr_complex_refactor.rs
expression: mir
---
type %t0 = i32
type %t1 = f32
type %t2 = struct _Complex_float { real: %t1, imag: %t1 }
type %t3 = bool

fn test(%param0: %t2, %param1: %t2) -> i32
{
  locals {
    %eq: i32
    %4: bool
    %5: bool
    %6: i32
    %7: i32
    %ne: i32
    %9: bool
    %10: bool
    %11: i32
    %12: i32
    %13: i32
  }

  bb1:
    %4 = %param0.field_0 feq %param1.field_0
    %5 = %param0.field_1 feq %param1.field_1
    %6 = %4 & %5
    %7 = %6
    %eq = %7
    %9 = %param0.field_0 fne %param1.field_0
    %10 = %param0.field_1 fne %param1.field_1
    %11 = %9 | %10
    %12 = %11
    %ne = %12
    %13 = %eq + %ne
    return %13
}
