src/tests/snapshots/cendol__tests__semantic_regr_complex_refactor__complex_ops_float.snap
---
source: src/tests/semantic_regr_complex_refactor.rs
expression: mir
---
type %t0 = void
type %t1 = f32
type %t2 = struct _Complex_float { real: %t1, imag: %t1 }

fn test(%param0: %t2, %param1: %t2) -> void
{
  locals {
    %add: %t2
    %4: f32
    %5: f32
    %6: %t2
    %7: %t2
    %sub: %t2
    %9: f32
    %10: f32
    %11: %t2
    %12: %t2
    %mul: %t2
    %14: f32
    %15: f32
    %16: f32
    %17: f32
    %18: f32
    %19: f32
    %20: %t2
    %21: %t2
    %div: %t2
    %23: f32
    %24: f32
    %25: f32
    %26: f32
    %27: f32
    %28: f32
    %29: f32
    %30: f32
    %31: f32
    %32: f32
    %33: f32
    %34: %t2
    %35: %t2
    %neg: %t2
    %37: f32
    %38: f32
    %39: %t2
    %conj: %t2
    %41: f32
    %42: %t2
  }

  bb1:
    %4 = %param0.field_0 fadd %param1.field_0
    %5 = %param0.field_1 fadd %param1.field_1
    %6 = struct{0: %4, 1: %5}
    %7 = %6
    %add = %7
    %9 = %param0.field_0 fsub %param1.field_0
    %10 = %param0.field_1 fsub %param1.field_1
    %11 = struct{0: %9, 1: %10}
    %12 = %11
    %sub = %12
    %14 = %param0.field_0 fmul %param1.field_0
    %15 = %param0.field_1 fmul %param1.field_1
    %16 = %14 fsub %15
    %17 = %param0.field_0 fmul %param1.field_1
    %18 = %param0.field_1 fmul %param1.field_0
    %19 = %17 fadd %18
    %20 = struct{0: %16, 1: %19}
    %21 = %20
    %mul = %21
    %23 = %param1.field_0 fmul %param1.field_0
    %24 = %param1.field_1 fmul %param1.field_1
    %25 = %23 fadd %24
    %26 = %param0.field_0 fmul %param1.field_0
    %27 = %param0.field_1 fmul %param1.field_1
    %28 = %26 fadd %27
    %29 = %28 fdiv %25
    %30 = %param0.field_1 fmul %param1.field_0
    %31 = %param0.field_0 fmul %param1.field_1
    %32 = %30 fsub %31
    %33 = %32 fdiv %25
    %34 = struct{0: %29, 1: %33}
    %35 = %34
    %div = %35
    %37 = fneg %param0.field_0
    %38 = fneg %param0.field_1
    %39 = struct{0: %37, 1: %38}
    %neg = %39
    %41 = fneg %param0.field_1
    %42 = struct{0: %param0.field_0, 1: %41}
    %conj = %42
    return
}
